tests/custom-5.4.5/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-5.4.5-compliant
policies:
  - ../../../kyverno-policies/custom-5.4.5.yaml
resources:
  - service.yaml
results:
  - policy: custom-5-4-5-tls-load-balancer
    rule: check-tls-load-balancer
    resources:
      - compliant-svc
    kind: Service
    result: pass
